--- a/package.json
+++ b/package.json
@@ -11,7 +11,21 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@types/node": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "browser-sync": "^2.29.3",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.8.1",
+    "prettier": "^3.0.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.0",
+    "typescript": "^5.1.3",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   }
