--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "typescript": "^5.1.3",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@auth0/auth0-vue": "^2.3.2"
   }
 }
