--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@auth0/auth0-vue": "^2.3.2"
+    "@auth0/auth0-vue": "^2.3.2",
+    "@types": "auth0/auth0-vue"
   }
 }
