--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.2",
-    "@types": "auth0/auth0-vue"
+    "@types": "auth0/auth0-vue",
+    "axios": "^1.6.2"
   }
 }
